updated stats display; fixed double tap zoom; added spacing to complete button

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     height: auto;
+    touch-action: manipulation;
     
     --green: #379235;
     --beige: #d0b793;
